K8/restapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restapi-deployment
  labels:
    app: restapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: restapi
  template:
    metadata:
      labels:
        app: restapi
    spec:
      containers:
      - name: restapi
        image: phaniyeshwanth123/firstrepo:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: restapi-service
spec:
  type: ClusterIP
  selector:
    app: restapi
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
