K8/ingress.yaml
apiVersion : networking.k8s.io/v1
kind: Ingress
metadata:
  name: restapi-ingress
spec:
  ingressClassName: nginx

  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
        - path: /add
          pathType: Prefix
          backend:
            service:
              name: restapi-service
              port:
                number: 8081
